:sparkle:Feature: 컨텐츠 tiptap 뷰어로 불러오도록 구현

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,3 +13,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
+
+.max-content {
+  max-width: max-content;
+  margin: 0 auto;
+}
