:lipstick:Style: 공통 레이아웃 설정

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,6 @@
 @import './theme.css';
+@import './text-viewer.css';
+@import './layout.css';
 
 * {
   margin: 0;
@@ -12,14 +14,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.responsive {
-  max-width: 100%;
-  height: auto;
-}
-
-.max-content {
-  max-width: max-content;
-  margin: 0 auto;
 }
